examples/test/testpolicy5054.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5054
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key39: value32
      key21: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value25
          key29: value1
      podSelector:
        matchLabels:
          key4: value5
          key44: value35
          key39: value6
